<resources>

    //Startup
    <string name="app_name">Encrypt_SMS</string>
    <string name="action_settings">Settings</string>
    <string name="encrypt">Encrypt Message</string>
    <string name="decrypt">Decrypt Message</string>
    <string name="key">Manage Keys</string>
    <string name="title_activity_start_up">Encrypt SMS</string>

    //Encrypt
    <string name="title_activity_encrypt">Encrypt a Message</string>
    <string name="enter_text">Say something</string>
    <string name="enter_email">Enter an email address(es)</string>
    <string name="enter_subject">Enter the subject</string>
    <string name="button_text">Send</string>


    //Decrypt
    <string name="title_activity_decrypt">Decrypt a Message</string>
    <string name="button2_text">Decrypt</string>
    <string name="message_display">The message will display here</string>
    <string name="key_text">Enter the key</string>
    <string name="paste_text">Paste message here</string>

    //Back Button
    <string name="back_button">Go Back</string>

    //Key
    <string name="title_activity_key">Manage Keys</string>
    <string name="enter_key">Please enter a key</string>
    <string name="add_button">Add Key</string>
    <string name="delete_button">Delete Key</string>

</resources>
