<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".StartUp"
    tools:showIn="@layout/activity_start_up">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="527dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/EncryptView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/encrypt"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

        <Button
            android:id="@+id/DecryptView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/decrypt"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

        <Button
            android:id="@+id/KeyView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/key"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>